--- a/client/package.json
+++ b/client/package.json
@@ -23,11 +23,11 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run watch:css && react-scripts start",
+    "build": "npm run watch:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css": "postcss src/style/tailwind.css -o src/style/main.css",
+    "watch:css": "postcss src/style/tailwind.css -o src/style/main.css",
     "build:watch": "postcss src/style/tailwind.css -o src/style/main.css --watch"
   },
   "eslintConfig": {
