--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^12.5.0",
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "postcss": "^8.2.1",
     "postcss-cli": "^8.3.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
